[package]
name = "roli"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Chloe-Woahie/roli-rs"
authors = ["Cayden <longwelldotpy@gmail.com>"]
license = "MIT"
description = "A low level wrapper for the Rolimons.com REST API."
homepage = "https://serde.rs/"
readme = "README.md"
keywords = ["rolimons", "roli", "roblox", "api"]
categories = ["api", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", default-features=false, features = ["json", "rustls-tls"] }
serde = {version="1.0.136", features=["derive"]}
thiserror = "1.0.38"

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }