[package]
authors = ["Cayden <longwelldotpy@gmail.com>"]
categories = ["api-bindings"]
description = "A low level wrapper for the Rolimons.com REST API."
edition = "2021"
keywords = ["rolimons", "roli", "roblox", "api"]
license = "MIT"
name = "roli"
readme = "README.md"
repository = "https://github.com/Chloe-Woahie/roli-rs"
version = "0.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", default-features=false, features = ["json", "rustls-tls"] }
serde = {version="1.0.136", features=["derive"]}
thiserror = "1.0.38"

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }