[package]
authors = ["Cayden <longwelldotpy@gmail.com>"]
categories = ["api-bindings"]
description = "A low level API wrapper for Rolimons.com."
edition = "2021"
keywords = ["rolimons", "roli", "roblox", "api"]
license = "MIT"
name = "roli"
readme = "README.md"
repository = "https://github.com/Chloe-Woahie/roli-rs"
version = "0.6.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", default-features=false, features = ["json", "rustls-tls"] }
serde = {version="1.0.158", features=["derive"]}
thiserror = "1.0.40"

[dev-dependencies]
clap = { version = "4.1.13", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }